@@ -2,6 +2,7 @@ Changes for templates:
 
 2009-10-24: version 1.1.3
 
+	* MySQL 5.1 broke backwards compatibility with table_cache (issue 63).
 	* Added a version number to the script (partial fix for issue 79).
 	* Added a test suite (issue 76, issue 59).
 	* Math operations were done in MySQL instead of PHP (issue 25).
